# python-kibana-logger

./: pyproject.toml
python-logger/__pycache__/: __init__.d.er
python_logger/: json_logger.py
