[tool.poetry]
name = "python_logger"
version = "0.1.1"
description = "Easy to import logger for fraud python applications."
authors = ["tyler <tytheguy95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-json-logger = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
